--- a/static/css/expertise.css
+++ b/static/css/expertise.css
@@ -10,9 +10,17 @@ html {
 }
 ul {
   padding-left: 40px;
+  padding-bottom: 10px;
 }
 li {
-  list-style: disc;
+  /* list-style-image: url("/static/img/checkcircwine.svg"); */
+  margin: 0;
+  padding: 10px 0 10px 40px;
+  list-style: none;
+  background-image: url("/static/img/checkcircwine.svg");
+  background-repeat: no-repeat;
+  background-position: left center;
+  background-size: 16px;
 }
 a {
   text-decoration: none;
@@ -236,18 +244,37 @@ html {
   }
 }
 .expertise-item-container {
-  background: #f6f6f6;
+  border-radius: 100%;
   min-width: 100%;
   transition: transform 200ms ease, background 200ms ease;
   cursor: pointer;
   max-height: 450px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #f6f6f6;
+  background-size: cover;
+  border-radius: 100%;
+}
+.expertise-item-container::before {
+  content: "";
+  background-image: var(--bgimg);
+  background-color: #f6f6f6;
+  background-size: cover;
+  border-radius: 100%;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  opacity: 0.7;
 }
 @media (min-width: 680px) {
   .expertise-item-container {
-    width: 400px;
-    min-width: 300px;
+    width: 160px;
+    min-width: 150px;
+    height: 160px;
     transform: translateX(0%) !important;
-    margin-right: 10px;
   }
   .expertise-item-container:last-of-type {
     margin-right: 0px;
@@ -255,13 +282,28 @@ html {
 }
 @media (min-width: 1440px) {
   .expertise-item-container {
-    width: 450px;
+    width: 190px;
+    height: 190px;
     max-height: 850px;
   }
 }
-.expertise-item-container:hover {
-  background: #d9d9d9;
+.expertise-item-container a {
+  border-radius: 100%;
+  text-align: center;
+  color: #93358d;
+  z-index: 1;
 }
+.expertise-item-container:hover {
+  background-color: #93358d;
+}
+.expertise-item-container:hover::before {
+  opacity: 0;
+  background-color: #93358d;
+}
+.expertise-item-container:hover a {
+  color: white;
+}
+
 .expertise-item-container .expertise-item-content {
   padding: 35px 25px;
   height: 100%;
@@ -488,7 +530,8 @@ html {
 }
 .expertise-info-container .expertise-info-content h5 {
   text-transform: uppercase;
-  color: #570b52;
+  color: #93358d;
+  /* color: #570b52; */
   font-size: 16px;
   margin-bottom: 20px;
 }
@@ -1694,7 +1737,7 @@ main {
 }
 .expertisepage-expertise-container .expertisepage-expertise-content {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   overflow: hidden;
   position: relative;
   padding-bottom: 90px;
@@ -1817,13 +1860,15 @@ main {
   display: flex;
   align-items: center;
   background: #570b52;
-  width: 210px;
+  max-width: 380px;
+  width: fit-content;
   padding: 8px 15px;
   position: relative;
 }
 @media (min-width: 1440px) {
   .expertise-main-container .expertise-main-content .expertise-main-title {
-    width: 230px;
+    max-width: 380px;
+    width: fit-content;
   }
 }
 .expertise-main-container .expertise-main-content .expertise-main-title::after {
@@ -2024,18 +2069,10 @@ main {
   }
 }
 
-.expertise-info-content > .nuestra-expertise-item {
-  background-color: #faf5fa;
-  transition: 200ms ease-in-out;
-  padding: 1rem;
+.expertise-info-content .nuestra-expertise-item {
+  margin-bottom: 20px;
 }
-.expertise-info-content > .nuestra-expertise-item:hover {
-  background-color: #93358d;
-  color: #fff;
-}
-.expertise-info-content
-  > .nuestra-expertise-item
-  > .nuestra-expertise-description.show {
-  display: block;
-  color: #fff;
+
+.expertise-info-content h2 {
+  color: #570b52;
 }
