--- a/static/css/expertise.css
+++ b/static/css/expertise.css
@@ -407,6 +407,11 @@ html {
   margin-bottom: 10px;
   font-weight: 600;
 }
+@media (min-width: 680px) {
+  .expertise-info-container .expertise-info-content .nuestra-expertise-item h4 {
+    font-size: 18px;
+  }
+}
 .expertise-info-container .expertise-info-content h5 {
   text-transform: uppercase;
   color: #93358d;
@@ -1493,12 +1498,19 @@ main {
   border-radius: 1%/5%;
   color: #93358d;
   background-color: #f6f6f6;
+  transform: scale(1);
+  transition: transform 300ms ease-in-out;
 }
 @media (min-width: 680px) {
   .expertisepage-expertise-container .expertisepage-expertise-content a {
     min-width: auto;
     width: 48%;
   }
+}
+.expertisepage-expertise-container .expertisepage-expertise-content a:hover {
+  transform: scale(1.05);
+  z-index: 5;
+  box-shadow: 0px 2px 4px #00000029;
 }
 .expertisepage-expertise-container .expertisepage-expertise-content a .purple-border {
   background-color: #93358d;
@@ -1540,6 +1552,11 @@ main {
 .expertise-item-container-page .expertise-info-container .expertise-info-content .nuestra-expertise-item h4 {
   margin-bottom: 10px;
   font-weight: 600;
+}
+@media (min-width: 680px) {
+  .expertise-item-container-page .expertise-info-container .expertise-info-content .nuestra-expertise-item h4 {
+    font-size: 18px;
+  }
 }
 .nuestra-expertise-item .nuestra-expertise-description {
   line-height: 1.8;
@@ -1799,6 +1816,7 @@ main {
   color: #54565a;
 }
 .extra-info-item .title-container {
+  cursor: pointer;
   display: flex;
   justify-content: space-between;
   padding: 20px 0;
@@ -1877,10 +1895,14 @@ main {
 .extra-info-arrow-container {
   width: 5%;
 }
-.arrow-desc {
+.arrow-down {
+  transition: transform 200ms ease-in-out;
   transform: rotate(45deg);
 }
-
+.arrow-up {
+  transition: transform 200ms ease-in-out;
+  transform: rotate(225deg);
+}
 .carrousel-buttons-container {
   position: absolute;
   left: 50%;
