--- a/static/css/que_hacemos.css
+++ b/static/css/que_hacemos.css
@@ -389,7 +389,7 @@ html {
 @media (min-width: 680px) {
   .section-title-container {
     font-size: 24px;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
   }
 }
 @media (min-width: 1080px) {
@@ -672,6 +672,10 @@ main {
   .clientes-container .clientes-content {
     min-height: 209px;
   }
+}
+.clientes-content h5 {
+  margin-bottom: 20px;
+  font-weight: 600;
 }
 .clientes-container .clientes-content .clientes-logos-container {
   position: relative;
