--- a/static/css/expertise.css
+++ b/static/css/expertise.css
@@ -1504,6 +1504,7 @@ main {
 @media (min-width: 680px) {
   .expertisepage-expertise-container .expertisepage-expertise-content a {
     min-width: auto;
+    font-size: 18px;
     width: 48%;
   }
 }
@@ -1676,12 +1677,12 @@ main {
 }
 .expertise-main-container .expertise-main-content .expertise-main-subtitle-container p {
   color: #54565a;
-  font-size: 15px;
+  font-size: 16px;
   line-height: 1.8;
 }
 @media (min-width: 1440px) {
   .expertise-main-container .expertise-main-content .expertise-main-subtitle-container p {
-    font-size: 17px;
+    font-size: 18px;
   }
 }
 .expertise-main-container .expertise-main-content .expertise-info-container {
@@ -1829,6 +1830,11 @@ main {
   font-size: 13px;
   margin: 0;
 }
+@media (min-width: 680px) {
+  .extra-info-item h5 {
+    font-size: 16px;
+  }
+}
 .extra-info-item .extra-info-respuesta a {
   color: #93358d;
 }
@@ -1840,6 +1846,11 @@ main {
   margin: 0;
   opacity: 0;
   overflow: hidden;
+}
+@media (min-width: 680px) {
+  .extra-info-respuesta {
+    font-size: 15px;
+  }
 }
 .extra-info-respuesta p {
   margin-bottom: 10px;
