--- a/static/css/casos.css
+++ b/static/css/casos.css
@@ -283,36 +283,58 @@ html {
 }
 
 .casos-item-container {
-  background: #F6F6F6;
+  /* background: #F6F6F6; */
   min-width: 100%;
   transition: transform 200ms ease, background 200ms ease;
-  cursor: pointer;
-  max-height: 450px
+  scroll-snap-align: start;
+  /* max-height: 450px */
 }
 
 @media (min-width: 680px) {
   .casos-item-container {
-    width: 400px;
-    min-width: 300px;
-    transform: translateX(0%) !important;
-    margin-right: 10px
+    min-width: 50%;
+    padding-right: 10px;
+  /* width: 400px; */
+    /* min-width: 300px; */
+    /* transform: translateX(0%) !important; */
+    /* margin-right: 10px */
   }
 
-  .casos-item-container:last-of-type {
+  /* .casos-item-container:last-of-type {
     margin-right: 0px
+  } */
+}
+
+@media (min-width: 1080px) {
+  .casos-item-container {
+    min-width: calc(100%/3);
+    /* width: 450px;
+    max-height: 850px; */
   }
 }
 
-@media (min-width: 1440px) {
+/* @media (min-width: 1440px) {
   .casos-item-container {
     width: 450px;
     max-height: 850px
   }
+} */
+
+.casos-item-container>a {
+  cursor: pointer;
+  display: block;
+  width: 100%;
+  min-height: 100%;
+  background: #f6f6f6;
 }
 
-.casos-item-container:hover {
-  background: #D9D9D9
+.casos-item-container>a:hover {
+  background: #d9d9d9;
 }
+
+/* .casos-item-container:hover {
+  background: #D9D9D9
+} */
 
 .casos-item-container .casos-item-content {
   padding: 35px 25px;
@@ -472,7 +494,7 @@ html {
 }
 
 .casos-item-container .casos-item-content .casos-link-container span {
-  font-weight: 500;
+  font-weight: 600;
   color: #54565A;
   font-size: 14px
 }
@@ -1699,17 +1721,26 @@ main {
 }
 
 .casos-container .casos-content .casos-data-container {
-  position: relative;
-  padding-bottom: 90px;
-  display: flex;
-  overflow: hidden;
+  /* position: relative; */
   width: 100%;
-  justify-content: flex-start
+  padding-bottom: 44px;
+  display: flex;
+  overflow-x: scroll;
+  scroll-snap-type: x mandatory;
+  scroll-behavior: smooth;
+  scrollbar-width: 0;
+  -ms-overflow-style: none;
+  /* overflow: hidden;
+  justify-content: flex-start */
+}
+
+.casos-container .casos-content .casos-data-container::-webkit-scrollbar {
+  display: none;
 }
 
 @media (min-width: 680px) {
   .casos-container .casos-content .casos-data-container {
-    padding-bottom: 80px
+    padding-bottom: 44px
   }
 }
 
@@ -1734,7 +1765,7 @@ main {
 .casos-container .casos-content .casos-data-container.animate>.casos-item-container:nth-of-type(3) {
   animation-delay: 600ms
 }
-
+/* 
 @media (min-width: 680px) and (max-width: 1080px) {
   .casos-container .casos-content .casos-data-container {
     overflow-x: scroll
@@ -1746,7 +1777,7 @@ main {
     padding-bottom: 0px;
     min-height: 499px
   }
-}
+} */
 
 .casos-container .casos-content .casos-btn-container {
   margin: 50px 0
@@ -1789,14 +1820,23 @@ main {
 }
 
 .casospage-casos-container .casospage-casos-content {
+  width: 100%;
   display: flex;
-  justify-content: flex-start;
+  overflow-x: scroll;
+  scroll-snap-type: x mandatory;
+  scroll-behavior: smooth;
+  scrollbar-width: 0;
+  -ms-overflow-style: none;
+  /* justify-content: flex-start;
   overflow: hidden;
-  position: relative;
-  padding-bottom: 90px
+  position: relative; */
+  padding-bottom: 44px
+}
+.casospage-casos-container .casospage-casos-content::-webkit-scrollbar {
+  display: none;
 }
 
-@media (min-width: 680px) and (max-width: 1080px) {
+/* @media (min-width: 680px) and (max-width: 1080px) {
   .casospage-casos-container .casospage-casos-content {
     overflow-x: scroll
   }
@@ -1806,7 +1846,7 @@ main {
   .casospage-casos-container .casospage-casos-content {
     padding-bottom: 0px
   }
-}
+} */
 
 .casos-item-container-page {
   margin-bottom: 15px;
@@ -2076,4 +2116,50 @@ main {
   .casos-main-container .casos-main-content .casos-main-img-container {
     margin-top: 60px
   }
+}
+
+.carrousel-buttons {
+  display: flex;
+  justify-content: center;
+}
+
+.carrousel-buttons-container {
+  /* position: absolute; */
+  /* bottom: 10%; */
+  /* left: 50%; */
+  /* transform: translateX(-50%); */
+  display: flex;
+  justify-content: space-between;
+  /* align-items: center; */
+  width: 120px;
+  /* z-index: 4; */
+  padding-bottom: 64px;
+}
+
+@media (min-width: 680px) {
+  .carrousel-buttons-container>.h-mobile {
+    display: none;
+  }
+}
+
+@media (min-width: 1080px) {
+  .carrousel-buttons-container .h-tablet {
+    display: none;
+  }
+}
+
+.carrousel-buttons-container .carrousel-button {
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: background 200ms ease;
+}
+
+.carrousel-buttons-container .carrousel-button:hover {
+  background: #93358d;
+}
+
+.carrousel-buttons-container .carrousel-button.active {
+  background: #93358d;
 }
