--- a/static/css/que_hacemos.css
+++ b/static/css/que_hacemos.css
@@ -1196,7 +1196,6 @@ main {
   /* background: #f6f6f6; */
   min-width: 100%;
   transition: transform 200ms ease, background 200ms ease;
-  cursor: pointer;
   scroll-snap-align: start;
   /* max-height: 450px; */
 }
@@ -1225,12 +1224,13 @@ main {
 
 .casos-item-container>a {
   display: block;
+  cursor: pointer;
   width: 100%;
   min-height: 100%;
   background: #f6f6f6;
 }
 
-.casos-item-container:hover>a {
+.casos-item-container>a:hover {
   background: #d9d9d9;
 }
 
