--- a/static/css/que_hacemos.css
+++ b/static/css/que_hacemos.css
@@ -773,14 +773,22 @@ main {
   }
 }
 
+.carrousel-container>.carrousel-buttons-container {
+  position: absolute;
+  z-index: 4;
+  bottom: -40px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
 @media (min-width: 680px) {
-  .carrousel-buttons-container>.h-mobile {
+  .carrousel-buttons-container.h-mobile, .carrousel-buttons-container>.h-mobile {
     display: none;
   }
 }
 
 @media (min-width: 1080px) {
-  .carrousel-buttons-container .h-tablet {
+  .carrousel-buttons-container.h-mobile, .carrousel-buttons-container>.h-tablet {
     display: none;
   }
 }
