--- a/static/css/expertos-personalizacion.css
+++ b/static/css/expertos-personalizacion.css
@@ -127,25 +127,39 @@ a {
   }
 }
 
-.landing-page-title-container {
+.section-container {
   margin-bottom: 20px;
 }
 
-.landing-page-title-container h2 {
-  text-transform: uppercase;
+.landing-page-title-container h1 {
   font-size: 16px;
 }
 
 @media (min-width:640px) {
-  .landing-page-title-container h2 {
-    font-size: 19px;
+  .landing-page-title-container h1 {
+    font-size: 40px;
   }
 }
 
 @media (min-width:1440px) {
-  .landing-page-title-container h2 {
-    font-size: 21px;
+  .landing-page-title-container h1 {
+    font-size: 48px;
   }
+}
+
+.landing-page-title-container button,
+.landing-page-content button  {
+  border: 0;
+  border-radius: 8px;
+  padding: 12px 24px;
+  font-weight: 700;
+  text-align: center;
+}
+
+.landing-page-content h3 {
+  font-size: 24px;
+  font-weight: 700;
+  margin-bottom: 20px;
 }
 
 .landing-page-content p,
@@ -229,11 +243,11 @@ a {
 }
 
 .bg-grey {
-  background: #54565A !important
+  background: #54565A 
 }
 
 .bg-gray {
-  background: #54565A !important
+  background: #54565A 
 }
 
 .bg-gray-thin {
@@ -273,11 +287,11 @@ a {
 }
 
 .color-grey {
-  color: #54565A !important
+  color: #54565A
 }
 
 .color-gray {
-  color: #54565A !important
+  color: #54565A
 }
 
 .border-wine {
@@ -326,6 +340,10 @@ a {
 main {
   position: relative;
   z-index: 3
+}
+
+.section-container {
+  padding: 120px 0px 60px;
 }
 
 .section-padding {
@@ -526,7 +544,7 @@ main {
 }
 
 .page-link-container {
-  margin-top: 150px;
+  padding-top: 150px;
   display: flex;
   align-items: center;
   cursor: pointer;
@@ -1154,7 +1172,8 @@ main {
   position: absolute;
   width: 100%;
   top: 0;
-  z-index: 10
+  z-index: 10;
+  color:#fff !important;
 }
 
 .header-container .header-content {
@@ -1202,14 +1221,14 @@ main {
 }
 
 .header-container .header-content .header-menu-container .header-button-container {
-  margin-left: 18px
+  margin-left: 18px;
 }
 
 .header-container .header-content .header-menu-container .header-button-container .button-item {
   height: 3px;
   width: 26px;
   margin-bottom: 6px;
-  background: #fff
+  background: #fff !important;
 }
 
 .header-container .header-content .header-menu-container .header-button-container .button-item:last-of-type {
@@ -1331,4 +1350,10 @@ main {
 
 .carrousel-buttons-container .carrousel-button.active {
   background: #93358d;
+}
+
+.purple-grandient-background {
+  background-image: url(/static/img/expertos-personalizacion/Gradient.webp);
+  background-position: center;
+  background-size: cover;
 }
